<resources>
    <string name="app_name">VenYa for Android</string>
    <string name="venya_node_server">192.168.99.100</string>
    <string name="venya_node_port">8888</string>
    <string name="default_username">changeme</string>
    <string name="default_password">changeme</string>
    <string name="default_lang">eng</string>
    <string name="default_email">changeme@venya.es</string>
    <string name="true_value">on</string>
    <string name="false_value">off</string>
    <string name="success_status">SUCCESS</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sessionclosed">closed</string>
    <string name="idFormat">^[0-9a-fA-F]{24}$</string>
    <string name="usernameFormat">^\\w{8,}$</string>
    <string name="passwordFormat">^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).{6,}$</string>
    <string name="emailFormat">^\\w+([\\.-_]?\\w+)*@\\w+([\\.-_]?\\w+)*(\\.\\w{2,3})+$</string>
    <string name="phoneFormat">^(\\+|00)?[0-9]{4,}$</string>
    <string name="postcodeFormat">^\\w+([\\s-]*\\w*)?$</string>
    <string name="dobFormat">[0-9]{8}</string>
    <string-array name="statusFields">
        <item>status</item>
        <item>errormessage</item>
        <item>action</item>
    </string-array>
    <string-array name="customerFields">
        <item>id</item>
        <item>type</item>
        <item>firstname</item>
        <item>surname</item>
        <item>email</item>
        <item>username</item>
        <item>password</item>
        <item>address</item>
        <item>phone</item>
        <item>times</item>
        <item>language</item>
        <item>notifications</item>
        <item>location</item>
        <item>sessionid</item>
    </string-array>
    <string-array name="customerCunstructFields">
        <item>id</item>
        <item>firstname</item>
        <item>surname</item>
        <item>dob</item>
    </string-array>
    <string-array name="addressFields">
        <item>street</item>
        <item>postcode</item>
        <item>city</item>
        <item>country</item>
    </string-array>
    <string-array name="upperCaseFields">
        <item>postcode</item>
        <item>language</item>
        <item>notifications</item>
        <item>location</item>
    </string-array>
    <string-array name="booleanFields">
        <item>notifications</item>
        <item>location</item>
    </string-array>
    <string-array name="listFields">
        <item>language</item>
    </string-array>
    <string-array name="nameFields">
        <item>address</item>
        <item>firstname</item>
        <item>surname</item>
    </string-array>
    <string-array name="privateFields">
        <item>id</item>
        <item>sessionid</item>
        <item>type</item>
        <item>action</item>
    </string-array>
    <string-array name="secretFields">
        <item>password</item>
    </string-array>
    <string-array name="dateFields">
        <item>dob</item>
    </string-array>
    <string-array name="subscriberTypes">
        <item>customer</item>
        <item>provider</item>
    </string-array>
    <string-array name="languages">
        <item>esp</item>
        <item>eng</item>
        <item>fra</item>
    </string-array>
    <string-array name="menuOptions">
        <item>home</item>
        <item>apointments</item>
        <item>notifications</item>
        <item>settings</item>
        <item>logout</item>
    </string-array>
    <string-array name="menuOptionsTags">
        <item>home</item>
        <item>apointments</item>
        <item>notifications</item>
        <item>settings</item>
        <item>logout</item>
        <item>changeaddress</item>
        <item>changeemail</item>
        <item>changeusername</item>
        <item>changepassword</item>
        <item>changelanguage</item>
    </string-array>
    <string-array name="signinOptions">
        <item>signin</item>
        <item>register</item>
        <item>lostusername</item>
        <item>lostpassword</item>
    </string-array>
    <string-array name="securityCheckFields">
        <item>id</item>
        <item>surname</item>
        <item>dob</item>
    </string-array>
    <string name="pages_choosesite_esp">choose_site_esp.html</string>
    <string name="pages_choosesite_eng">choose_site_eng.html</string>
    <string name="pages_signin">signin.html</string>
    <string name="pages_home">home.html</string>
    <string name="pages_register">register.html</string>
    <string name="pages_settings">settings.html</string>
    <string name="pages_changeSettings">changeSettings.html</string>
    <string name="pages_appointments">appointments.html</string>
    <string name="pages_notifications">notifications.html</string>
    <string name="pages_settingsPages_email">changeEmail.html</string>
    <string name="pages_settingsPages_password">changePassword.html</string>
    <string name="pages_settingsPages_times">changeTimes.html</string>
    <string name="pages_settingsPages_username">changeUsername.html</string>
    <string name="pages_settingsPages_address">changeAddress.html</string>
    <string name="pages_settingsPages_phone">changePhone.html</string>
    <string name="pages_lostusername">lostUsername.html</string>
    <string name="pages_lostpassword">lostPassword.html</string>
    <string name="pages_lostid">lostID.html</string>
    <string name="pages_webcreatecustomer">web_create_customer.html</string>
    <string name="pages_webnewappointment">web_new_appointment.html</string>
    <string name="pages_showlostinfo">show_lost_info.html</string>
    <string name="pages_logout">logout.html</string>
    <string name="pages_provider_signin">provider_signin.html</string>
    <string name="pages_provider_register">provider_register.html</string>
    <string name="pages_provider_home">provider_home.html</string>
    <string name="pages_provider_settings">provider_settings.html</string>
    <string name="pages_provider_logout">provider_logout.html</string>
    <string name="pages_provider_createcustomer">provider_create_customer.html</string>
    <string name="pages_provider_changeSettings">changeSettings.html</string>
    <string name="pages_provider_appointments">appointments.html</string>
    <string name="pages_provider_settingsPages_email">changeEmail.html</string>
    <string name="pages_provider_settingsPages_password">changePassword.html</string>
    <string name="pages_provider_settingsPages_times">changeTimes.html</string>
    <string name="pages_provider_settingsPages_username">changeUsername.html</string>
    <string name="pages_provider_settingsPages_address">changeAddress.html</string>
    <string name="pages_provider_settingsPages_phone">changePhone.html</string>
    <string name="pages_provider_lostusername">lostUsername.html</string>
    <string name="pages_provider_lostpassword">lostPassword.html</string>
    <string name="pages_provider_showlostinfo">show_lost_info.html</string>
    <string name="zone_provider">providers area</string>
    <string name="zone_customer">customers area</string>
    <string name="init_welcome">WELCOME TO VENYA</string>
    <string name="init_customer">I AM A CUSTOMER</string>
    <string name="init_provider">I AM A PROVIDER</string>
    <string name="menu_home">@string/app_name</string>
    <string name="menu_appointments">appointments</string>
    <string name="menu_notifications">notifications</string>
    <string name="menu_settings">settings</string>
    <string name="menu_logout">logout</string>
    <string name="menu_changeaddress">Update address</string>
    <string name="menu_changeemail">Update email</string>
    <string name="menu_changeusername">Update username</string>
    <string name="menu_changepassword">Update password</string>
    <string name="menu_changelanguage">Select a language</string>
    <string name="header_register">Create your account</string>
    <string name="header_lostid">Recover your registration ID</string>
    <string name="header_lostpassword">Get your password</string>
    <string name="header_lostusername">Get your username</string>
    <string name="action_login">login successful</string>
    <string name="action_home">home</string>
    <string name="action_settings">settings for</string>
    <string name="action_appointments">appointments</string>
    <string name="action_notifications">notifications</string>
    <string name="action_registration">successfully registered</string>
    <string name="action_logout">logout</string>
    <string name="signin_title">Please log in</string>
    <string name="signin_button">Log in</string>
    <string name="signin_rememberme">Remember me</string>
    <string name="signup_question">Do not have an account?</string>
    <string name="signup_link">Sign up</string>
    <string name="signin_already">Already have an accont?</string>
    <string name="signin_lostusername">Lost username</string>
    <string name="signin_lostpassword">Lost password</string>
    <string name="home_welcome">welcome</string>
    <string name="home_yourdata">This is yout data</string>
    <string name="address_street">street</string>
    <string name="address_number">number</string>
    <string name="address_postcode">postcode</string>
    <string name="address_city">city</string>
    <string name="address_country">country</string>
    <string name="customer_uid">user id</string>
    <string name="customer_id">id</string>
    <string name="customer_type">type</string>
    <string name="customer_firstname">firstname</string>
    <string name="customer_surname">surname</string>
    <string name="customer_dob">date of birth</string>
    <string name="customer_address">address</string>
    <string name="customer_email">email</string>
    <string name="customer_username">username</string>
    <string name="customer_password">password</string>
    <string name="customer_phone">phone</string>
    <string name="customer_times">preferred times</string>
    <string name="customer_language">language</string>
    <string name="customer_notifications">notifications</string>
    <string name="customer_location">location</string>
    <string name="customer_oldpassword">old password</string>
    <string name="customer_oldusername">old username</string>
    <string name="customer_oldemail">old email</string>
    <string name="customer_sessionid">session id</string>
    <string name="provider_id">id</string>
    <string name="provider_type">type</string>
    <string name="provider_name">name</string>
    <string name="provider_address">address</string>
    <string name="provider_email">email</string>
    <string name="provider_username">username</string>
    <string name="provider_password">password</string>
    <string name="provider_phone">phone</string>
    <string name="provider_language">language</string>
    <string name="provider_oldpassword">old password</string>
    <string name="provider_oldusername">old username</string>
    <string name="provider_oldemail">old email</string>
    <string name="provider_sessionid">session id</string>
    <string name="provider_webcreation">customer successfully created</string>
    <string name="settings_yoursettings">these are your settings</string>
    <string name="settings_setting">setting</string>
    <string name="settings_value">value</string>
    <string name="settings_option">option</string>
    <string name="settings_stringoption">edit</string>
    <string name="settings_booleanoption">on/off</string>
    <string name="settings_listoption">change</string>
    <string name="settings_updatesuccess">successfully updated</string>
    <string name="form_page">page</string>
    <string name="form_old">old</string>
    <string name="form_new">new</string>
    <string name="form_confirm">confirm</string>
    <string name="form_enterdetails">please enter your details</string>
    <string name="form_submit">submit</string>
    <string name="form_cancel">cancel</string>
    <string name="form_getid">ID lost? Get it here</string>
</resources>