<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.nohasmith.venya_android_app.MainActivity"
    android:background="@color/venya_background">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorsView"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp" />

    <TextView
        android:text="@string/menu_changeaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeAddressTitle1"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="24sp" />

    <TextView
        android:text="@string/form_enterdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeAddressTitle2"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/changeAddressTitle1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/address_street"
        android:ems="10"
        android:id="@+id/changeStreet"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/changeAddressTitle2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/address_postcode"
        android:ems="10"
        android:id="@+id/changePostcode"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/changeStreet"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/address_city"
        android:ems="10"
        android:id="@+id/changeCity"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/changePostcode"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/darker_gray" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/address_country"
        android:ems="10"
        android:id="@+id/changeCountry"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/changeCity"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/darker_gray" />

    <Button
        android:text="@string/form_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeAddressButton"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/changeCountry"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/form_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelLink"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/changeAddressButton"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorPrimaryDark" />

</android.support.constraint.ConstraintLayout>
