<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.nohasmith.venya_android_app.MainActivity"
    android:background="@color/venya_background">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorsView"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp" />

    <TextView
        android:text="@string/header_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerTitle1"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp" />
<!--
    <TextView
        android:text="@string/form_enterdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerTitle2"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/registerTitle1"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp" />
-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/customer_uid"
        android:ems="10"
        android:id="@+id/uidInput"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/registerTitle1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/usernameInput"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/uidInput"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/customer_surname"
        android:ems="10"
        android:id="@+id/surnameInput"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/usernameInput"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/customer_dob"
        android:ems="10"
        android:id="@+id/dobInput"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/surnameInput"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:singleLine="false"
        android:selectAllOnFocus="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/customer_email"
        android:ems="10"
        android:id="@+id/emailInput"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/dobInput"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/form_confirm"
        android:ems="10"
        android:id="@+id/confirmEmail"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/customer_phone"
        android:ems="10"
        android:id="@+id/phoneInput"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/confirmEmail"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/darker_gray" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/form_confirm"
        android:ems="10"
        android:id="@+id/confirmPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/darker_gray" />

    <Button
        android:text="@string/form_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/signin_already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signinLink"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/form_getid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgottenId"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signinLink"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorPrimaryDark" />
</android.support.constraint.ConstraintLayout>
