<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.nohasmith.venya_android_app.MainActivity"
    android:background="@color/venya_background">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorsView"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp" />

    <TextView
        android:text="@string/header_lostid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lostIdTitle1"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="24sp" />

    <TextView
        android:text="@string/form_enterdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lostIdTitle2"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/lostIdTitle1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/customer_surname"
        android:ems="10"
        android:id="@+id/surnameLostId"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/lostIdTitle2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/customer_firstname"
        android:ems="10"
        android:id="@+id/firstnameLostId"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/surnameLostId"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/customer_dob"
        android:ems="10"
        android:id="@+id/dobLostId"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/firstnameLostId"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/darker_gray" />

    <Button
        android:text="@string/form_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lostIdButton"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/dobLostId"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toSignin"
        android:hint="@string/signin_button"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/lostIdButton"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorPrimaryDark" />

</android.support.constraint.ConstraintLayout>
